package main.java.algorithm.genetic_algorithm.dna;

public interface GeneticInheritanceProcessStrategy {
    DNA crossover(DNA parentA, DNA parentB);
}
