package main.java.database;

public interface Database {
    String dataToString();
}
