package main.java.system;

public class Printer {
    public void print(String statement) {
        System.out.println(statement);
    }
}
