package main.java.system;

public abstract class System {
    public abstract void runSystem();
}
